add logback config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,13 @@ server:
 mybatis:
   mapperLocations: classpath:mapper/*.xml
 
+logging:
+  config: classpath:logback-${spring.profiles.active}.xml
+
 spring:
+  profiles:
+    active: dev
+
   datasource:
     url: jdbc:mysql://localhost:3306/jelly
     username: root
